--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <footer>
         <div class="navbar"> 
         <img src="https://via.placeholder.com/150x30"> 
             <div class="nav">
@@ -36,6 +35,79 @@
                     </a>           
                 </div>
             </div> 
+        </div>
+
+        <div class="bloc1">
+            <img src="img/placeholder.png">
+            <div class="content">
+                <h3> Un titre</h3>
+                <p>Pellentesque lacus sem, finibus sed neque ac,
+                    consectetur cursus dui. Pellentesque dictum
+                     varius nulla ut euismod. Nulla eu dictum augue,
+                      in ullamcorper nibh. </p>
+                <img src="img/placeholder.png"width="20%" height="20%" >
+            </div>
+        </div>
+        <div class="bloc2">
+            <img src="img/placeholder.png">
+            <div class="content">
+                <h3>Un autre titre</h3>
+                <p>Nullam dui orci, volutpat ac leo quis,
+                  pellentesque porta lorem. Ut iaculis lectus
+                  ac enim elementum luctus. Sed fermentum nulla
+                  ut justo aliquam, vitae finibus nibh lobortis</p>
+                <img src="img/placeholder.png"width="20%" height="20%" >
+            </div>
+        </div>
+
+
+<footer>
+        <div class="container">
+            <div class="title">
+                <h2> Titre du footer</h2>
+            </div>
+            <div class="foot">
+                <div class="column">
+                    <img src="img/shopping-cart.svg">
+                    <h3>Sous-Titre 1</h3>
+                    <p>Texte 1</p>
+                    <a>Voir le catalogue -></a>
+                </div>
+                <div class="column">
+                    <img src="img/hand.svg">
+                    <h3>Sous-Titre 2</h3>
+                    <p>Texte 2</p>
+                    <a>Prendre rendez-vous -></a>
+                </div>
+                <div class="column">
+                    <img src="img/violin (1).svg">
+                    <h3>Sous-Titre 3</h3>
+                    <p>Texte 3</p>
+                    <a>Voir les disponibilités -></a>
+                </div>
+                <div class="column">
+                    <h3>Horaires</h3>
+                    <p>Mardi: 10h-12h, 14h-18h<br>
+                       Mardi: 10h-12h, 14h-18h<br>
+                       Mardi: 10h-12h, 14h-18h<br>
+                       Mardi: 10h-12h, 14h-18h<br>
+                       Mardi: 10h-12h, 14h-18h
+                    </p>
+                    <a>Nous contacter -></a>
+                </div>
+
+            </div>
+            <div class="last">
+                <div class="tel">
+                    <img src="img/phone.png" width="24" height="24"></img>
+                    <i class="far fa-phone-alt"></i>
+                    <p>+33 06 56 37 25 14</p>
+                </div>
+                <div class="socials">
+                    <p>Suivez-nous sur nos réseaux sociaux</p>
+
+                </div>
+            </div>
         </div>
 
     </footer>
